# mcp-alaiia

./: .gitignore  README.md  main.py  pyproject.toml
src/: mcp_tools.py
src/presentation/: __init__.py  mcp_server.py
src/shared/: __init__.py  output_manager.py
src/shared/mappers/: __init__.py  swagger_mapper.py
src/shared/utils/: field_filter.py
src/tools/curl_generator/: __init__.py
src/tools/curl_generator/application/: __init__.py  services.py
src/tools/curl_generator/domain/: __init__.py  models.py  repositories.py
src/tools/curl_generator/infrastructure/: __init__.py  repositories.py
src/tools/curl_parser/: __init__.py
src/tools/curl_parser/application/: __init__.py  mappers.py  services.py
src/tools/curl_parser/domain/: __init__.py  models.py  repositories.py
src/tools/curl_parser/infrastructure/: __init__.py  repositories.py
src/tools/database_query/: README.md  __init__.py
src/tools/database_query/application/: __init__.py  services.py
src/tools/database_query/domain/: __init__.py  config.py  models.py  repositories.py
src/tools/database_query/infrastructure/: __init__.py
src/tools/feature_generator/: __init__.py
src/tools/feature_generator/application/: services.py
src/tools/feature_generator/domain/: models.py  repositories.py
src/tools/feature_generator/infrastructure/: repositories.py
src/tools/jmeter_generator/: __init__.py
src/tools/jmeter_generator/application/: services.py
src/tools/karate_java_generator/: README.md  __init__.py
src/tools/swagger_analysis/: __init__.py
(+17 files in other folders)
